syntax = "proto3";

package proto;

import "app_icon.proto";

option java_package = "com.xiaopeng.appstore.protobuf";
option java_multiple_files = true;

message AppDetailResponseProto {
  int32 code = 1;
  string msg = 2;
  AppDetailDataProto data = 3;
}

message AppDetailDataProto {
  string app_id = 1;
  string app_name = 2;
  string package_name = 3;
  string brief_desc = 4;
  string detail_desc = 5;
  int64 version_code = 6;
  string version_name = 7;
  string version_desc = 8;
  int64 update_time = 9;
  repeated string detail_img = 10;
  string download_url = 11;
  string config_url = 12;
  string config_md5 = 13;
  string md5 = 14;
  string source = 15;
  int32 is_hidden = 16;
  int32 is_silent_install = 17;
  int32 status = 18;
  string size = 19;
  int32 is_force_update = 20;
  AppIconDataProto app_icons = 21;
  DeveloperDataProto developer = 22;

  string apk_permissions = 23;
  string privacy_policy = 24;
}



message DeveloperDataProto{
  int32 developer_id = 1;
  string developer_name = 2;
}

message DependentAppProto{
  string package_name = 1;
  string app_id = 2;
  string type = 3;
  string md5 = 4;
}
