syntax = "proto3";

package proto;

option java_package = "com.xiaopeng.appstore.protobuf";
option java_multiple_files = true;

message AppIndexList {
  repeated AppIndex index_list = 1;
}
message AppIndex {
  string package_name = 1;
  int32 index = 2;
}
