syntax = "proto3";

package proto;
import "app_detail.proto";

option java_package = "com.xiaopeng.appstore.protobuf";
option java_multiple_files = true;

message AppUpdateResponseProto {
  int32 code = 1;
  string msg = 2;
  AppUpdateDataProto data = 3;
}

message AppUpdateDataProto {
  repeated AppDetailDataProto apps = 1;
}